--- a/UI/index.html
+++ b/UI/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>I MA A BOSS</h1>
-    <a href="./html/userSignIn.html">Sign In</a>
+    <h1>hello rwanda nziza</h1>
+    <a href="./html/userSignIn.html">Signin</a>
 </body>
 </html>
