path changed well

--- a/UI/html/userSignIn.html
+++ b/UI/html/userSignIn.html
@@ -17,12 +17,12 @@
                     <a href="index.html" class="main-header__brand">Quick <span id="logo-name">Credit</span> </a>
             </div><nav class="main-nav">
                 <ul class="main-nav__items">
-                    <li class="main-nav__item"><a href="../index.html">Home</a></li>
+                    <li class="main-nav__item"><a href="/UI/index.html">Quick-Credit</a></li>
                     <li class="main-nav__item"><a href="userTrackLaon.html">Track Loan</a></li>
                     <li class="main-nav__item"><a href="userRequestLoan.html">RequestLoan Loan</a></li>
                 </ul>
             </nav>
-        </header>
+        </header>S
         <div class="backdrop"></div>
         <nav class="mobile-nav">
             <ul class="mobile-nav__items">
